# rust_rdrand

./: Cargo.toml  appveyor.yml  build.rs
.github/workflows/: rdrand.yml
benches/: rdrand.rs  rdseed.rs  std.rs
src/: changelog.rs  errors.rs  impls.ll  lib.rs  util.rs
tests/: bench.rs
