[package]
name = "rdrand"
version = "0.8.0"
authors = ["Simonas Kazlauskas <rdrand@kazlauskas.me>"]
description = "An implementation of random number generator based on rdrand and rdseed instructions"
keywords = ["rand", "rdrand", "rdseed", "random"]
license = "ISC"
repository = "https://github.com/nagisa/rust_rdrand/"
documentation = "https://docs.rs/rdrand/0.7.0/"
edition = "2018"

[[bench]]
name = "rdrand"
harness = false

[dependencies]
rand_core = { version = "0.6", default-features = false }

[dev-dependencies]
criterion = "0.3"

[features]
default = ["std"]
std = ["rand_core/std"]
